src/objects/Customer_History__c.object
<CustomObject>
    <fields>
        <fullName>ACV__c</fullName>
        <label>ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Historicals</relationshipLabel>
        <relationshipName>Customer_Historicals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Backlog_Years__c</fullName>
        <label>Backlog Years</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Period__c</fullName>
        <label>Billing Period</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Order_Processor__c</fullName>
        <label>Core Order Processor</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Period__c</fullName>
        <label>Fiscal Period</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTM_Category__c</fullName>
        <label>GTM Category</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GTM_Product__c</fullName>
        <label>GTM Product</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Term__c</fullName>
        <label>Initial Term</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <label>Order Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Region__c</fullName>
        <label>Owner Region</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Theater__c</fullName>
        <label>Owner Theater</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pivotal_Product_Type__c</fullName>
        <label>Pivotal Product Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Portfolio__c</fullName>
        <label>Product Portfolio</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal__c</fullName>
        <label>Renewal</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residual__c</fullName>
        <label>Residual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <label>Sales Rep</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selling_Motion__c</fullName>
        <label>Selling Motion</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Country__c</fullName>
        <label>Sold To Country</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCV__c</fullName>
        <label>TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week_of_Qtr__c</fullName>
        <label>Week of Qtr</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Week_of_Yr__c</fullName>
        <label>Week of Yr</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>Customer History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CH-{0000000}</displayFormat>
        <label>Customer History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Historicals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>